RESOLVED FIXED 189625
WebGL 2 Conformance: primitive restart and draw_primitive_restart WebGL2 sample
https://bugs.webkit.org/show_bug.cgi?id=189625
Summary WebGL 2 Conformance: primitive restart and draw_primitive_restart WebGL2 sample
Justin Fan
Reported 2018-09-14 13:00:31 PDT
WebGL 2 Conformance: primitive restart and draw_primitive_restart WebGL2 sample
Attachments
Patch (23.70 KB, patch)
2018-09-25 13:34 PDT, Justin Fan
no flags
Patch (23.86 KB, patch)
2018-09-25 15:29 PDT, Justin Fan
no flags
Patch (24.13 KB, patch)
2018-09-25 15:52 PDT, Justin Fan
no flags
Justin Fan
Comment 1 2018-09-14 13:01:09 PDT
Justin Fan
Comment 2 2018-09-17 15:28:02 PDT
Patch is ready to go; waiting on updates to webgl testing framework before uploading.
Justin Fan
Comment 3 2018-09-20 17:14:45 PDT
Thanks to the new tests, regressions: Unexpected text-only failures (6) webgl/2.0.0/conformance/extensions/angle-instanced-arrays-out-of-bounds.html [ Failure ] webgl/2.0.0/conformance/rendering/draw-elements-out-of-bounds.html [ Failure ] webgl/2.0.0/conformance2/rendering/instanced-arrays.html [ Failure ] webgl/2.0.0/conformance2/rendering/instanced-rendering-bug.html [ Failure ] webgl/2.0.0/conformance2/rendering/out-of-bounds-index-buffers-after-copying.html [ Failure ] webgl/2.0.0/conformance2/vertex_arrays/vertex-array-object.html [ Failure ]
Justin Fan
Comment 4 2018-09-21 16:26:50 PDT
Regressions are fixed (on mac), but unfortunately there are no new passes within the webgl/conformance and conformance2 tests, only in the long-running deqp suite. Whipping up a basic test case to verify primitive restart functionality.
Justin Fan
Comment 5 2018-09-25 13:34:10 PDT
EWS Watchlist
Comment 6 2018-09-25 13:36:49 PDT
Attachment 350780 [details] did not pass style-queue: ERROR: Source/WebCore/platform/graphics/GraphicsContext3D.h:721: enum members should use InterCaps with an initial capital letter or initial 'k' for C-style enums. [readability/enum_casing] [4] ERROR: Source/WebCore/platform/graphics/GraphicsContext3D.h:722: enum members should use InterCaps with an initial capital letter or initial 'k' for C-style enums. [readability/enum_casing] [4] ERROR: Source/WebCore/platform/graphics/GraphicsContext3D.h:723: enum members should use InterCaps with an initial capital letter or initial 'k' for C-style enums. [readability/enum_casing] [4] Total errors found: 3 in 11 files If any of these errors are false positives, please file a bug against check-webkit-style.
Dean Jackson
Comment 7 2018-09-25 13:53:34 PDT
Comment on attachment 350780 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=350780&action=review > Source/WebCore/html/canvas/WebGLRenderingContextBase.cpp:2009 > +unsigned WebGLRenderingContextBase::getMaxIndex(const RefPtr<JSC::ArrayBuffer> elementArrayBuffer, GC3Dintptr uoffset, GC3Dsizei n) I think you should pass in numElements raw, and do the / sizeof(T) inside here, the same way you do with the uoffset. > Source/WebCore/html/canvas/WebGLRenderingContextBase.cpp:2053 > + maxIndex = getMaxIndex<GC3Duint>(buffer, offset, count); ... although I assume count here has already take the sizeof(T) into account? > LayoutTests/webgl/webgl2-primitive-restart-expected.html:54 > + if(!isWebGL2) { Nit: if <space> (
Justin Fan
Comment 8 2018-09-25 14:16:38 PDT
(In reply to Dean Jackson from comment #7) > Comment on attachment 350780 [details] > Patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=350780&action=review > > > Source/WebCore/html/canvas/WebGLRenderingContextBase.cpp:2009 > > +unsigned WebGLRenderingContextBase::getMaxIndex(const RefPtr<JSC::ArrayBuffer> elementArrayBuffer, GC3Dintptr uoffset, GC3Dsizei n) > > I think you should pass in numElements raw, and do the / sizeof(T) inside > here, the same way you do with the uoffset. > > > Source/WebCore/html/canvas/WebGLRenderingContextBase.cpp:2053 > > + maxIndex = getMaxIndex<GC3Duint>(buffer, offset, count); > > ... although I assume count here has already take the sizeof(T) into account? Yes, count as passed into the parent function is already the correct number. Tryna figure out why the compilers aren't liking my function template.
Justin Fan
Comment 9 2018-09-25 15:29:40 PDT
EWS Watchlist
Comment 10 2018-09-25 15:32:15 PDT
Attachment 350802 [details] did not pass style-queue: ERROR: Source/WebCore/platform/graphics/GraphicsContext3D.h:721: enum members should use InterCaps with an initial capital letter or initial 'k' for C-style enums. [readability/enum_casing] [4] ERROR: Source/WebCore/platform/graphics/GraphicsContext3D.h:722: enum members should use InterCaps with an initial capital letter or initial 'k' for C-style enums. [readability/enum_casing] [4] ERROR: Source/WebCore/platform/graphics/GraphicsContext3D.h:723: enum members should use InterCaps with an initial capital letter or initial 'k' for C-style enums. [readability/enum_casing] [4] Total errors found: 3 in 11 files If any of these errors are false positives, please file a bug against check-webkit-style.
Justin Fan
Comment 11 2018-09-25 15:52:34 PDT
EWS Watchlist
Comment 12 2018-09-25 15:54:28 PDT
Attachment 350806 [details] did not pass style-queue: ERROR: Source/WebCore/platform/graphics/GraphicsContext3D.h:721: enum members should use InterCaps with an initial capital letter or initial 'k' for C-style enums. [readability/enum_casing] [4] ERROR: Source/WebCore/platform/graphics/GraphicsContext3D.h:722: enum members should use InterCaps with an initial capital letter or initial 'k' for C-style enums. [readability/enum_casing] [4] ERROR: Source/WebCore/platform/graphics/GraphicsContext3D.h:723: enum members should use InterCaps with an initial capital letter or initial 'k' for C-style enums. [readability/enum_casing] [4] Total errors found: 3 in 11 files If any of these errors are false positives, please file a bug against check-webkit-style.
WebKit Commit Bot
Comment 13 2018-09-25 17:24:59 PDT
Comment on attachment 350806 [details] Patch Clearing flags on attachment: 350806 Committed r236490: <https://trac.webkit.org/changeset/236490>
WebKit Commit Bot
Comment 14 2018-09-25 17:25:01 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.